--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
     {%- assign page_paths = site.header_pages | default: default_paths -%}
     {%- assign titles_size = site.pages | map: 'title' | join: '' | size -%}
     <a href="{{ site.baseurl }}/">
-    <img src="/logo.png" style="height: 50px;">
+    <img src="./logo.png" style="height: 50px;">
     </a>
     <a class="site-title" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
 
