--- a/src/components/DocumentDetails.astro
+++ b/src/components/DocumentDetails.astro
@@ -1,7 +1,7 @@
 ---
 import { Icon } from "@astrojs/starlight/components";
 
-const { title, description, docType, date, lastUpdated, externalParticipants, authors, reviewers, missingMembers, location, timeStart, timeEnd, isExternalUse } = Astro.props;
+const { title, description, docType, date, lastUpdated, externalParticipants, authors, reviewers, missingMembers, location, timeStart, timeEnd, isExternalUse, showLog } = Astro.props;
 ---
 
 <section>
