--- a/src/components/DocumentDetails.astro
+++ b/src/components/DocumentDetails.astro
@@ -1,7 +1,7 @@
 ---
 import { Icon } from "@astrojs/starlight/components";
 
-const { title, subTitle, docType, date, lastUpdated, externalParticipants, authors, reviewers, missingMembers, location, timeStart, timeEnd, isExternalUse, showLog } = Astro.props;
+const { title, subTitle, docType, date, lastUpdated, externalParticipants, authors, reviewers, missingMembers, location, timeStart, timeEnd, isExternalUse, showLog, url, version } = Astro.props;
 ---
 
 <section>
@@ -16,6 +16,14 @@ const { title, subTitle, docType, date, lastUpdated, externalParticipants, autho
 				<>
 					<dt class="taxonomy">Sommario</dt>
 					<dd class="content">{subTitle}</dd>
+				</>
+			)
+		}
+		{
+			version && (
+				<>
+					<dt class="taxonomy">Versione</dt>
+					<dd class="content">{version}</dd>
 				</>
 			)
 		}
@@ -92,6 +100,20 @@ const { title, subTitle, docType, date, lastUpdated, externalParticipants, autho
 			)
 		}
 	</dl>
+
+	{
+		url && (
+			<>
+				<div class="pdf-link">
+					<Icon name="github" size="1em" />
+					<a href={url} title="Documento PDF" target="_blank">
+						Documento PDF disponibile su GitHub
+					</a>
+				</div>
+			</>
+		)
+	}
+
 </section>
 
 <style>
@@ -145,4 +167,20 @@ const { title, subTitle, docType, date, lastUpdated, externalParticipants, autho
 		margin-top: 0;
 		padding: 0;
 	}
+
+	.pdf-link {
+		display: flex;
+		gap: 0.75em;
+		border: 1px solid var(--sl-color-gray-5);
+		border-radius: 0.5rem;
+		box-shadow: var(--sl-shadow-sm);
+		padding: 1rem;
+	}
+
+	.pdf-link:hover,
+	.pdf-link:focus {
+		background: var(--sl-color-gray-7, var(--sl-color-gray-6));
+		border-color: var(--sl-color-gray-2);
+	}
+
 </style>
