--- a/src/components/DocumentDetails.astro
+++ b/src/components/DocumentDetails.astro
@@ -169,12 +169,26 @@ const { title, subTitle, docType, date, lastUpdated, externalParticipants, autho
 	}
 
 	.pdf-link {
+		position: relative;
 		display: flex;
 		gap: 0.75em;
 		border: 1px solid var(--sl-color-gray-5);
 		border-radius: 0.5rem;
 		box-shadow: var(--sl-shadow-sm);
 		padding: 1rem;
+	}
+
+	.pdf-link a {
+		text-decoration: none;
+	}
+
+	a::before {
+		content: '';
+		position: absolute;
+		top: 0;
+		right: 0;
+		bottom: 0;
+		left: 0;
 	}
 
 	.pdf-link:hover,
