Aggiunto link e icona

--- a/src/components/SocialLinks.astro
+++ b/src/components/SocialLinks.astro
@@ -4,6 +4,11 @@ import { Icon } from "@astrojs/starlight/components";
 import type { Props } from '@astrojs/starlight/props';
 ---
 
+<a href={Common.specificationsDocumentURL} rel="me" class="sl-flex" title="Capitolato C5" target="_blank">
+	<span class="sr-only">Capitolato C5</span>
+	<svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M14.727 6.727H14V0H4.91c-.905 0-1.637.732-1.637 1.636v20.728c0 .904.732 1.636 1.636 1.636h14.182c.904 0 1.636-.732 1.636-1.636V6.727h-6zm-.545 10.455H7.09v-1.364h7.09v1.364zm2.727-3.273H7.091v-1.364h9.818v1.364zm0-3.273H7.091V9.273h9.818v1.363zM14.727 6h6l-6-6v6z"/></svg>
+</a>
+
 <a href={Common.documentsRepositoryURL} rel="me" class="sl-flex" title="GitHub" target="_blank">
 	<span class="sr-only">GitHub</span>
 	<Icon name="github" />
